fix openapi file
